--- a/admin/src/app/pages/jobseeker/jobseeker.component.html
+++ b/admin/src/app/pages/jobseeker/jobseeker.component.html
@@ -7,7 +7,7 @@
 						<h1>Jobseekers</h1>
 					</div>
 					<div class="float-right">
-						<button type="button" class="btn btn-outline-secondary btn-sm my-1" onclick="history.go(-1)">
+						<button type="button" class="btn btn-outline-secondary btn-sm " onclick="history.go(-1)">
 							<i class="ri-arrow-left-circle-line align-middle"></i> Back
 						</button>
 					</div>
