--- a/admin/src/app/pages/workauthorization/workauthorization.component.html
+++ b/admin/src/app/pages/workauthorization/workauthorization.component.html
@@ -21,7 +21,7 @@
 								<div class="row">
 									<div class="offset-lg-2 col-lg-8">
 										<!-- Alert start -->
-										<div class="alert alert-success alert-dismissible fade show" role="alert" style="display: none;">
+										<div class="alert alert-success alert-dismissible fade show" *ngIf="show" role="alert" >
 										  <strong>Successfully !</strong> Added Work Authorization Details
 										  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
 											<span aria-hidden="true">×</span>
@@ -31,43 +31,30 @@
 								</div>	
 								<!-- Alert end -->
 								<!-- Form start -->
-								<form class="myadmin-form mt-4">
+								<form class="myadmin-form mt-4" [formGroup]="addWA" (ngSubmit)="submit()">
 									<div class="row">
 										<div class="form-group offset-lg-2 col-lg-4">
 											<label>Country Name</label>
-											<select class="form-control">
-												<option>Select </option>
-												<option>Afghanistan </option>
-												<option>Australia </option>
-												<option>Bangladesh </option>
-												<option>Brazil </option>
-												<option>Canada </option>
-												<option>China </option>
-												<option>Germany </option>
-												<option>India </option>
-												<option>Iran </option>
-												<option>Japan </option>
-												<option>Malaysia </option>
-												<option>Mexico </option>
-												<option>New Zealand </option>
-												<option>Russia </option>
-												<option>San Marino </option>
-												<option>Saudi Arabia </option>
-												<option>South Africa </option>
-												<option>Sri Lanka </option>
-												<option>Switzerland </option>
-												<option>UAE - United Arab Emirates </option>
-												<option>UK - United Kingdom </option>
-												<option>USA - United States of America </option>
-											</select>
+											<select class="form-control" (change)="counid($event.target.value)" name="name" formControlName="name" >
+												<option disabled selected value="" >Select</option>
+												<option *ngFor="let c of country" value="{{c.id}}_{{c.nicename}}" >{{c.nicename}}</option>
+									    	</select>
+											<div *ngIf="submitted && f.name.errors">
+												<span class="warn" *ngIf="f.name.errors.required">Field is required</span>
+											</div>
+											<span class="warn" *ngIf="dup">Already Exist</span>
 										</div>	
 										<div class="form-group  col-lg-2">
 											<label>Visa Type</label>
-											<input type="text" class="form-control" placeholder="Ex: H1B Visa">
+											<input type="text" class="form-control" name="visa" formControlName="visa" placeholder="Ex: H1B Visa">
+											<div *ngIf="submitted && f.visa.errors">
+												<span class="warn" *ngIf="f.visa.errors.required">Field is required</span>
+											</div>
+											<span class="warn" *ngIf="empty">Enter the valid field</span>
 										</div>									
 										<div class="form-group col-lg-2">
 											<label>&nbsp;</label>										
-											<button type="button" class="btn mybtn btn-blue btn-block" id="addSkill" href="javascript:;">Add </button>
+											<button type="submit" class="btn mybtn btn-blue btn-block" id="addSkill" href="javascript:;">Add </button>
 										</div>
 									</div>
 								</form>								
@@ -78,98 +65,13 @@
 									<div class="offset-lg-2 col-lg-8">
 										<div class="table-container">
 											<div class="table-responsive">
-												<div id="DataTables_Table_0_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer"><div class="top"></div><table class="sort-table table custom-table m-0 dataTable no-footer" id="DataTables_Table_0" role="grid">
+												<div id="DataTables_Table_0_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer"><div class="top"></div><table datatable [dtOptions]="dtOption" class="sort-table table custom-table m-0 dataTable no-footer" id="DataTables_Table_0" role="grid">
 													<thead>
 														<tr role="row"><th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Country Name: activate to sort column ascending" style="width: 295.578px;">Country Name</th><th class="sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Visa Type: activate to sort column ascending" style="width: 146.469px;">Visa Type</th><th class="text-center sorting" tabindex="0" aria-controls="DataTables_Table_0" rowspan="1" colspan="1" aria-label="Action: activate to sort column ascending" style="width: 115.953px;">Action</th></tr>
 													</thead>
 													<tbody>
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-														
-													<tr role="row" class="odd">
-															<td>USA - United States of America</td>
-															<td>H-1B Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>USA - United States of America</td>
-															<td>H-2B Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="odd">
-															<td>UK - United Kingdom</td>
-															<td>B-2 Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>UAE - United Arab Emirates</td>
-															<td>L-1Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="odd">
-															<td>Australia</td>
-															<td>H-1B Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>France</td>
-															<td>H-2B Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="odd">
-															<td>India</td>
-															<td>B-2 Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>Japan</td>
-															<td>L-1Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="odd">
-															<td>Malaysia</td>
-															<td>B-2 Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr><tr role="row" class="even">
-															<td>Singapore</td>
-															<td>B-2 Visa</td>
-															<td class="text-center">
-																<a href="#" class="btn btn-outline-primary btn-xs mr-2"><i class="ri-pencil-fill"></i></a>
-																<a href="#" class="btn btn-outline-danger btn-xs"><i class="ri-delete-bin-fill"></i></a>
-															</td>
-														</tr></tbody>
-												</table><div class="bottom"><div class="dataTables_length" id="DataTables_Table_0_length"><label>Show <select name="DataTables_Table_0_length" aria-controls="DataTables_Table_0" class="custom-select custom-select-sm form-control form-control-sm"><option value="10">10</option><option value="25">25</option><option value="50">50</option><option value="100">100</option></select> entries</label></div><div class="dataTables_paginate paging_simple_numbers" id="DataTables_Table_0_paginate"><ul class="pagination"><li class="paginate_button page-item previous disabled" id="DataTables_Table_0_previous"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="0" tabindex="0" class="page-link">Previous</a></li><li class="paginate_button page-item active"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="1" tabindex="0" class="page-link">1</a></li><li class="paginate_button page-item "><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="2" tabindex="0" class="page-link">2</a></li><li class="paginate_button page-item next" id="DataTables_Table_0_next"><a href="#" aria-controls="DataTables_Table_0" data-dt-idx="3" tabindex="0" class="page-link">Next</a></li></ul></div></div><div class="clear"></div></div>
+													</tbody>
+												</table>
 											</div>
 										</div>
 									</div>
