--- a/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
+++ b/frontend/src/app/modules/features/employer/employee-chart/employee-chart.component.html
@@ -78,7 +78,7 @@
 				<div class="chartTitle mb-4">
 					{{"nav.applicants" | translate}}
 				</div>
-				<canvas baseChart #chart
+				<canvas baseChart #chart height="80"
 					[datasets]="doughnutChartDataHired"
 					[labels]="doughnutChartLabelsHired"
 					[chartType]="doughnutBarType"
