--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -1,5 +1,15 @@
 <div formGroupName="personalDetails">
-   <div class="row mt-5">
+	<div class="row mt-5">
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<div class="custom-control custom-checkbox mb-2">
+				  <input type="checkbox" class="custom-control-input" formControlName="entry" id="customCheckRemote01">
+				<label class="custom-control-label font-weight-bold" for="customCheckRemote01"> <a > Entry Level</a></label>
+				</div>
+			</div>
+		</div>
+	</div>
+   <div class="row mt-2">
       <div class="col-lg-4 col-md-6">
         <div class=" form-group">
           <label>{{"shared.firstName" | translate }}</label>
