--- a/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/job-information/job-information.component.html
@@ -2,6 +2,16 @@
 	<div class="row mt-5">
 		<div class="col-lg-4 col-md-6">
 			<div class=" form-group">
+				<div class="custom-control custom-checkbox mb-2">
+				  <input type="checkbox" class="custom-control-input" formControlName="entry" id="customCheckRemote01">
+				<label class="custom-control-label font-weight-bold" for="customCheckRemote01"> <a > Entry Level Jobs</a></label>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row mt-2">
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
 				<label>{{"shared.jobTitle" | translate}}</label>
 				<input appMarkAsterisk formControlName="title" type="text" class="form-control text-capitalize" [placeholder]="'shared.jobTitle' | translate"/>
 			</div>
