--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -91,7 +91,7 @@
 				<div class="row">
 					<div class="col-lg-6 caption">
 						<ul class="list-group">
-							<li class="list-group-item">{{"userProfile.relocation" | translate }}</li>
+							<li class="list-group-item">{{"userProfile.relocate" | translate }}</li>
 						</ul>
 					</div>
 					<div class="col-lg-6 info">
@@ -239,13 +239,16 @@
 				</div>
 				<div class="col-lg-8 info">
 					<ul class="list-group">
-						<li class="list-group-item">
+						<li class="list-group-item" *ngIf="!childForm?.value?.educationExp?.experience || childForm?.value?.educationExp?.experience =='' || childForm?.value?.educationExp?.experience==0">
+						  {{childForm?.value?.educationExp?.experience}} Years
+						</li>
+						<li class="list-group-item" *ngIf="childForm?.value?.educationExp?.experience && childForm?.value?.educationExp?.experience !='' && childForm?.value?.educationExp?.experience !=0">
 						  {{childForm?.value?.educationExp?.experience}} Years
 						</li>
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-12 row">
+			<div class="col-lg-12 row" *ngIf="!childForm?.value?.personalDetails?.entry">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"matches.totalYearsOfSapExperience" | translate }}</li>
@@ -273,7 +276,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-lg-12 row">
+			<div class="col-lg-12 row" *ngIf="!childForm?.value?.personalDetails?.entry">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
 						<li class="list-group-item text-capitalize">{{"userProfile.handsOnExperience" | translate }}</li>
