--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-education-exp/create-candidate-education-exp.component.html
@@ -20,14 +20,14 @@
       <div class="col-lg-4 col-md-5">
         <div class=" form-group">
           <label>{{"userProfile.fieldOfStudy" | translate }}</label>
-          <input (change)="onChangeStudyValue($event?.target?.value, i)" formControlName="field_of_study" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.fieldOfStudy' | translate">
+          <input (change)="onChangeStudyValue($event?.target?.value, i)" formControlName="field_of_study" type="text" class="form-control text-capitalize" [placeholder]="'userProfile.fieldOfStudy' | translate">
           <app-control-messages [control]="ticket['controls']['field_of_study']"></app-control-messages>
         </div>
       </div>
       <div class="col-lg-2 col-md-5">
         <div class=" form-group">
           <label>{{"userProfile.yearOfCompletionGraduation" | translate }}</label>
-          <input maxlength="4" (change)="onChangeCompletionValue($event?.target?.value, i)" numbersOnly formControlName="year_of_completion" type="text" class="form-control text-capitalize" [placeholder]="'postYourResume.yearOfCompletionGraduation' | translate">
+          <input maxlength="4" (change)="onChangeCompletionValue($event?.target?.value, i)" numbersOnly formControlName="year_of_completion" type="text" class="form-control text-capitalize" [placeholder]="'userProfile.yearOfCompletionGraduation' | translate">
           <app-control-messages [control]="ticket['controls']['year_of_completion']"></app-control-messages>
 		 
         </div>
@@ -46,12 +46,13 @@
     <div class="col-lg-3 col-md-6">
       <div class=" form-group">
         <label>{{"userProfile.totalYearsOfExp" | translate }}</label>
-        <input (ngModelChange)="keyPress()" appMarkAsterisk numbersOnly formControlName="experience" type="text" class="form-control w-40 text-center" placeholder="+8">
+		<div appMarkAsterisk *ngIf="!this.childForm.value.personalDetails.entry" ></div>
+        <input (ngModelChange)="keyPress()" numbersOnly formControlName="experience" type="text" class="form-control w-40 text-center" placeholder="+8">
         <app-control-messages [control]="f['experience']"></app-control-messages>
 		 <small *ngIf="totalExpError"  class="text-danger">Total is greater than SAP Experience</small>
       </div>
     </div>
-    <div class="col-lg-3 col-md-6">
+    <div class="col-lg-3 col-md-6" *ngIf="childForm.value.personalDetails.entry==false" >
       <div class=" form-group">
         <label>{{"matches.totalYearsOfSapExperience" | translate }}</label>
         <input (ngModelChange)="keyPress()" appMarkAsterisk numbersOnly formControlName="sap_experience" type="text" class="form-control w-50 text-center"  placeholder="+5">
