--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-skillset/create-candidate-skillset.component.html
@@ -1,5 +1,6 @@
 
 <div formGroupName="skillSet">
+ <ng-container *ngIf="childForm.value.personalDetails.entry==false">
   <div class="row mt-5">
     <div class="col-lg-12 col-md-6">
       <label>{{"userProfile.handsOnExperience" | translate }}</label>
@@ -56,7 +57,7 @@
         </div>
       </ng-container>
     </div>
-
+</ng-container>
   <div class="row mt-3">
     <div class="col-lg-9 col-md-6">
       <div class=" form-group">
