--- a/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile-job-matches/shared-user-profile-job-matches.component.html
@@ -16,7 +16,7 @@
 					</div>
 				</div>
 			</div>
-			<div  *ngIf="postedJobsDetails?.match_select?.sap_experience=='0'">
+			<div  *ngIf="postedJobsDetails?.match_select?.sap_experience=='0'  && postedJobsDetails?.entry==false  ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -45,7 +45,7 @@
 					</div>
 				</div>	
 			</div>
-			<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='0'">
+			<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='0' && postedJobsDetails?.entry==false ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -350,7 +350,7 @@
 					</div>
 				</div>
 			</div>
-			<div  *ngIf="postedJobsDetails?.match_select?.sap_experience=='1'">
+			<div  *ngIf="postedJobsDetails?.match_select?.sap_experience=='1' && postedJobsDetails?.entry==false ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -379,7 +379,7 @@
 					</div>
 				</div>	
 			</div>
-			<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='1'">
+			<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='1' && postedJobsDetails?.entry==false ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -673,7 +673,7 @@
 					</div>
 				</div>
 			</div>
-			<div  *ngIf="postedJobsDetails?.match_select?.sap_experience=='2'">
+			<div  *ngIf="postedJobsDetails?.match_select?.sap_experience=='2' && postedJobsDetails?.entry==false ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -702,7 +702,7 @@
 					</div>
 				</div>	
 			</div>
-			<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='2'">
+			<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='2' && postedJobsDetails?.entry==false ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -993,7 +993,7 @@
 					</div>
 				</div>
 			</div>
-			<div  *ngIf="postedJobsDetails?.match_select?.sap_experience==''">
+			<div  *ngIf="postedJobsDetails?.match_select?.sap_experience=='' && postedJobsDetails?.entry==false ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
@@ -1022,7 +1022,7 @@
 					</div>
 				</div>	
 			</div>
-			<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience==''">
+			<div  *ngIf="postedJobsDetails?.match_select?.hands_on_experience=='' && postedJobsDetails?.entry==false ">
 				<div class="row">
 					<div class="col-lg-4 caption">
 						<ul class="list-group">
