--- a/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
+++ b/frontend/src/app/shared/component/shared-user-profile/shared-user-profile.component.html
@@ -164,11 +164,12 @@
 	</div>
 	<div class="col-lg-8 info">
 		<ul class="list-group">
-			<li class="list-group-item text-capitalize">{{userInfo?.experience ? userInfo?.experience + ' Years' : '--'}}</li>
+			<li class="list-group-item text-capitalize" *ngIf="!userInfo?.experience  || userInfo?.experience ==0">Entry level</li>
+			<li class="list-group-item text-capitalize" *ngIf="userInfo?.experience  && userInfo?.experience !=0">{{userInfo?.experience ? userInfo?.experience + ' Years' : '--'}}</li>
 		</ul>
 	</div>
 </div>
-<div class="row">
+<div class="row"  *ngIf="!userInfo?.entry">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
 			<li class="list-group-item">{{"userProfile.totalSapExp" | translate }}</li>
@@ -192,7 +193,7 @@
 		</ul>
 	</div>
 </div>	
-<div class="row">
+<div class="row"  *ngIf="!userInfo?.entry">
 	<div class="col-lg-4 caption">
 		<ul class="list-group">
 			<li class="list-group-item" style="min-height: 46px;">{{"userProfile.handsOnExperience" | translate }}</li>
@@ -321,7 +322,7 @@
 	</div>
 </div>
 
-<div class="row mt-3 info-box" *ngIf="applicationDetails.others &&applicationDetails.others.length && applicationDetails.others.length !=0 ">
+<div class="row mt-3 info-box" *ngIf="applicationDetails && applicationDetails.others &&applicationDetails.others.length && applicationDetails.others.length !=0 ">
 	<div class="col-lg-12">
 		<div class="pj-title mb-3">
 			 <h6>{{"userProfile.others" | translate }}</h6>
